知识问答系统

--- a/static/index.html
+++ b/static/index.html
@@ -20,26 +20,18 @@
             <div class="chat-header">
                 <div>
                     <h3>智能助手在线</h3>
-                    <p id="headerDescription">我可以帮您查询工程规范、标准和设计图纸信息</p>
-                </div>
-                <div>
-                    <select class="kb-selector" id="knowledgeBaseSelector">
-                        <option value="standards">📋 国家标准库</option>
-                        <option value="engineering_knowledge_base">📚 工程知识库</option>
-                        <option value="regulations">⚖️ 法律法规库</option>
-                        <option value="drawings">📐 项目图纸库</option>
-                    </select>
+                    <p id="headerDescription">我可以同时查询工程规范、国家标准和法律法规，为您提供全面准确的答案</p>
                 </div>
             </div>
             
             <div class="chat-messages" id="chatMessages">
                 <div class="message assistant">
-                    您好！我是您的工程监理智能助手。我可以帮助您查询：<br>
-                    • 国家和地方工程建设规范标准<br>
-                    • 项目设计图纸技术要求<br>
-                    • 施工质量验收标准<br>
-                    • 安全技术规范<br><br>
-                    请直接提出您的问题，比如"混凝土保护层厚度要求"或"脚手架连墙件间距规定"。
+                    您好！我是您的工程监理智能助手。我会自动搜索所有数据库为您提供答案：<br>
+                    • 📋 国家和行业标准（GB、JGJ、CJJ等）<br>
+                    • ⚖️ 法律法规和管理办法<br>
+                    • 📚 工程技术规范要求<br>
+                    • 🔗 相关文档的官方链接<br><br>
+                    请直接提出您的问题，比如"住宅专项维修资金提取标准"或"钢筋连接质量要求"。
                 </div>
             </div>
             
