修复前端Markdown渲染问题：简化检测逻辑，优化结构化参考信息显示，完善样式支持

--- a/static/index.html
+++ b/static/index.html
@@ -121,6 +121,9 @@
         <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
     </div>
 
+    <!-- 加载Markdown解析库 -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js"></script>
+    
     <!-- 加载JavaScript -->
     <script src="/static/js/utils.js"></script>
     <script src="/static/js/chat.js"></script>
