Remove remaining UI sections and simplify initial messages

--- a/static/index.html
+++ b/static/index.html
@@ -32,10 +32,7 @@
                     • 📚 工程技术规范要求<br>
                     • 🏗️ 项目图纸内容解读<br>
                     • 🔗 相关文档的官方链接<br><br>
-                    您可以：<br>
-                    • 直接提问，如"住宅专项维修资金提取标准"<br>
-                    • 点击 📋 按钮上传PDF图纸进行解读<br>
-                    • 拖拽PDF文件到聊天窗口快速上传
+                    请直接提出您的问题，比如"住宅专项维修资金提取标准"或"钢筋连接质量要求"。
                 </div>
             </div>
             
